fix: Adjust vertical text alignment in hero image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,6 @@ body {
     padding-top: 80px;
     font-family: "Montserrat Alternates", sans-serif;
     font-weight: 400;
-
 }
 
 h2{
@@ -50,19 +49,29 @@ h2{
 
 /*-- hero style --*/
 
+.hero-image {
+    position: relative;
+    width: 100%; 
+    height: 500px;
+}
+
 .hero-image img {
     width: 100%;
-    height: 500px;
+    height: 100%; 
     object-fit: cover; 
 }
 
 .hero-text {
     position: absolute;
     top: 50%;
-    text-align: end; 
+    right: 0; 
+    transform: translateY(-50%); 
     padding: 20px; 
     background-color: rgba(0, 0, 0, 0.5); 
     color: white;
+    width: 80%; 
+    box-sizing: border-box; 
+    text-align: center; 
 }
 
 
@@ -100,6 +109,7 @@ h2{
     border-radius: 5px;
 }
 
+
 /*-- buttons styles --*/
 
 .btn-save,
@@ -128,6 +138,7 @@ h2{
     background-color: #fff;
     color: #8c778c;
     border-color:#8c778c;
+
 }
 
 .btn-edit:hover,
@@ -164,10 +175,15 @@ h2{
 }
 
 
+
 /* Additional styles for smaller screens */
 @media (max-width: 768px) {
     .table th, .table td {
       font-size: 14px; 
     }
+    .hero-text {
+        padding: 10px;
+    }
+
   }
   
